# uv sync --no-build-isolation

[project]
name = "g_tha"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "diso>=0.1.4",
    "itk>=5.4.4.post1",
    "matplotlib>=3.10.7",
    "minio>=7.2.18",
    "monai-generative>=0.2.3",
    "monai[lpips]>=1.5.1",
    "py-cpuinfo>=9.0.0",
    "pydicom>=3.0.1",
    "streamlit>=1.51.0",
    "tomlkit>=0.13.3",
    "torch>=2.9.0",
    "totalsegmentator>=2.11.0",
    "tqdm>=4.67.1",
    "warp-lang>=1.10.0",
    "wheel>=0.45.1",
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" }]
torchvision = [{ index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" }]
torchaudio = [{ index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" }]
